fix: social-media-hero gap and general position adjusted

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -563,6 +563,14 @@ body {
 
 }
 
+@media (max-width: 576px) {
+  .social-media-buttons .btn-social,
+  .social-media-buttons-footer .btn-social{
+    font-size: 1.6rem;
+  }
+}
+
+
 .btn-social {
   width: 44px;
   height: 44px;
